add nodemon as dev-dependencie

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/ramonmoraes/structure-generator/issues"
   },
-  "homepage": "https://github.com/ramonmoraes/structure-generator#readme"
+  "homepage": "https://github.com/ramonmoraes/structure-generator#readme",
+  "devDependencies": {
+    "nodemon": "1.18.9"
+  }
 }
