--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/ramonmoraes/structure-generator#readme",
   "devDependencies": {
+    "chai": "4.2.0",
     "nodemon": "1.18.9"
   }
 }
