--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/ramonmoraes/structure-generator#readme",
   "devDependencies": {
     "chai": "4.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "1.18.9"
   }
 }
