--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon src/index.js",
     "test": "mocha test/*",
     "test:watch": "mocha test/* --watch",
+    "lint": "eslint",
     "build": "rollup -c"
   },
   "repository": {
@@ -35,6 +36,9 @@
   "homepage": "https://github.com/ramonmoraes/structure-generator#readme",
   "devDependencies": {
     "chai": "4.2.0",
+    "eslint": "^5.11.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "mocha": "5.2.0",
     "nodemon": "1.18.9",
     "rollup": "1.0.0",
