--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon src/index.js",
     "test": "mocha test/*",
     "test:watch": "mocha test/* --watch",
-    "lint": "eslint",
+    "lint": "eslint src/* test/*",
+    "lint:fix": "eslint src/* test/* --fix",
     "build": "rollup -c"
   },
   "repository": {
